# password_wallet

./: .gitignore  README.md  pyproject.toml  pytest.toml
.github/workflows/: python-package.yml
password_wallet/: __init__.py  __main__.py  config.py
password_wallet/blueprints/: auth.py  encryption.py  home.py
password_wallet/db/: __init__.py  _models.py  _models_.py
password_wallet/encryptions/: __init__.py  caesar.py  intarface.py  protocol.py  utils.py
password_wallet/encryptions/src/: caesar.py  des.py  rc4.py  salsa20.py
password_wallet/static/: script.js  style.css  style_base.css  style_extra.css
password_wallet/static/css/: style_base.css  style_extra.css
password_wallet/static/js/: auth.js  home.js  script.js
password_wallet/templates/: base.html  credentials.html  home.html
tests/: test_des.py  test_salsa20.py  test_utils.py
