[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "password_wallet"
version = "0.1.0"

requires-python = ">=3.12.4"

dependencies = [
    "flask==3.1.2",
    "sqlmodel==0.0.27",
    "icecream==2.1.8"
]
authors = [
    { name = "Seweryn Swiech", email = "sswiech.ti221@zsp1piotrkow.edu.pl"}
]

readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["tests*", "instance*"]

[tool.setuptools.package-data]
exclude = ["tests*", "instance*"]

